<resources>
    <string name="app_name">FleurHaven</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="flower1">Flower</string>
    <string name="tvcart">Shopping Cart</string>
    <string name="tvproduct">Products</string>
    <string name="tvtotal">Total:</string>
    <string name="check_out">Check Out</string>
    <string name="fleurhaven">Fleur Haven</string>
    <string name="bannerline">━━━━━━━━━━━━━━━━━━━━</string>
    <string name="addtocart">Add to cart</string>
    <string name="recommended">Recommended</string>
    <string name="pinkthemed">Pink Themed Bouquets</string>
    <string name="purplethemed">Purple Themed Bouquets</string>
    <string name="filter">Filter</string>
    <string name="categories">Categories</string>
</resources>