<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/filter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="18dp"
            android:src="@drawable/filter_icon" />

        <TextView
            android:id="@+id/filtertxt"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/albertsans"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="82dp"
        android:textSize="20sp"
        android:fontFamily="@font/albertsans"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"/>

    <RadioButton
        android:id="@+id/pinkthemeradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/albertsans"
        android:text="@string/pinkthemed"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="120dp" />

    <RadioButton
        android:id="@+id/purplethemeradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/albertsans"
        android:text="@string/purplethemed"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/apply"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Apply"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="313dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="199dp"
        android:fontFamily="@font/albertsans"
        tools:ignore="MissingConstraints"/>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="238dp"
        android:fontFamily="@font/albertsans"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>