<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FFFCF8"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:weightSum="4"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <!-- EditText for Search Bar -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:background="@drawable/search_bar_layout"
                android:gravity="center_vertical"
                android:hint="Search"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/search_icon" />
    </LinearLayout>

    <!-- Title Text -->

    <TextView
        android:id="@+id/tv_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/albertsans"
        android:text="@string/tvcart"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/tv_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/albertsans"
        android:text="@string/tvproduct"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="121dp" />

    <!-- Product 1 added to cart -->
    <View
        android:id="@+id/productview1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="#FAFAFA"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <View
        android:id="@+id/frame1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:background="@drawable/cartbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <!-- Product 2 added to cart -->

    <ImageView
        android:id="@+id/flowerimg1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        app:srcCompat="@drawable/flower_sample"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="157dp" />

    <View
        android:id="@+id/productview2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="#FAFAFA"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <!-- Product 3 added to cart -->
    <View
        android:id="@+id/frame2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:background="@drawable/cartbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/flowerimg2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        app:srcCompat="@drawable/flower_sample"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="295dp" />

    <View
        android:id="@+id/productview3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="#FAFAFA"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />



    <View
        android:id="@+id/frametotal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/total_purchase"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/albertsans"
        android:text="@string/tvtotal"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="634dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:background="@color/white"
        android:backgroundTint="#EEEEEE"
        android:text="@string/check_out"
        android:fontFamily="@font/albertsans"
        android:textSize="13sp"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="631dp" />

    <View
        android:id="@+id/frame3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:background="@drawable/cartbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <ImageView
        android:id="@+id/flowerimg3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="10dp"
        app:srcCompat="@drawable/flower_sample"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="435dp" />


    <!-- BOTTOM NAVIGATION BAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FBF2F2"
        android:elevation="10dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="668dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/shopping_cart" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/person_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

